hide overflow to prevent "ghosting"

--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ body {
   display: flex;
   justify-content: center;
   z-index: 1;
+  overflow: hidden;
 }
 
 #showEmote img {
